--- a/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 02 - Spotify</title>
+    <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon">
     <!-- Estilo Customizado -->
     <link rel="stylesheet" href="estilos/styles.css">
     <!-- Bootstrap CSS -->
@@ -13,7 +14,42 @@
     <link rel="stylesheet" href="../fontawesome/css/all.css">
 </head>
 <body>
-    
+    <header> <!-- Início cabeçalho -->
+        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-warning">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
+                    <img src="./imagens/spotify.svg" alt="Logo Spotify" width="142">
+                </a>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
+                    <i class="fa-solid fa-bars text-white"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="menu">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Premium</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Ajuda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Baixar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Inscrever-se</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Entrar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header> <!-- /Fim cabeçalho -->
+
+    <main>
+        
+    </main>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
