--- a/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header> <!-- Início cabeçalho -->
-        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-warning">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
             <div class="container">
                 <a href="index.html" class="navbar-brand">
                     <img src="./imagens/spotify.svg" alt="Logo Spotify" width="142">
@@ -34,6 +34,7 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link">Baixar</a>
                         </li>
+                        <li class="nav-item divisor"></li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Inscrever-se</a>
                         </li>
@@ -45,10 +46,17 @@
             </div>
         </nav>
     </header> <!-- /Fim cabeçalho -->
-
-    <main>
-        
-    </main>
+    <section id="home" class=" d-flex"><!-- Início home -->
+        <div class="container align-self-center">
+            <div class="row">
+                <div class="col-md-12 capa">
+                    <h1>Música para todos</h1>
+                    <a href="" class="btn btn-custom btn-custom-roxo">Aproveite o Spotify Free</a>
+                    <a href="" class="btn btn-custom btn-custom-branco">Obter Spotify Premium</a>
+                </div>
+            </div>
+        </div>
+    </section><!-- Fim home -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
