--- a/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
@@ -56,8 +56,73 @@
                 </div>
             </div>
         </div>
-    </section><!-- Fim home -->
+    </section><!-- /Fim home -->
+    <section id="servicos"> <!-- Início estrutura conteúdos coluna 1 -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row pb-2 pt-3">
+                        <div class="col-md-6 mobileb">
+                            <img src="./imagens/img1.jpg" alt="author" class="img-fluid">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./imagens/img2.jpg" alt="author" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="row pb-3 pt-2">
+                        <div class="col-md-6 mobileb">
+                            <img src="./imagens/img3.jpg" alt="author" class="img-fluid ">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./imagens/img4.jpg" alt="author" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mt-2">
+                    <h2 class="text-center">O que o Spotify tem?</h2>
 
+                    <h3>Músicas</h3>
+                    <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+
+                    <h3>Playlists</h3>
+                    <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+
+                    <h3>Novos lançamentos</h3>
+                    <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está no top 50.</p>
+                </div>
+            </div>
+        </div>
+    </section><!-- /Fim estrutura conteúdos coluna 1 -->
+    <section> <!-- Início estrutura de conteúdos coluna 2 -->
+        <div id="recursos">
+            <div class="container mt-3 mb-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2 class="text-white">Fácil</h2>
+
+                        <h3>Buscar</h3>
+                        <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+                        <h3>Navegar</h3>
+                        <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+                        <h3>Descobrir</h3>
+                        <p>Curta músicas novas toda segunda-feira com uma playlist personalizada para você. Ou relaxe e curta uma das rádios.</p>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="row img-rotate">
+                            <div class="col-md-6">
+                                <img src="imagens/iphone1.png" alt="phone" class="img-fluid d-none d-md-block">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="imagens/iphone2.png" alt="phone" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> <!-- /Fim estrutura conteúdos coluna 2 -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
