--- a/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
@@ -50,9 +50,27 @@
         <div class="container align-self-center">
             <div class="row">
                 <div class="col-md-12 capa">
-                    <h1>Música para todos</h1>
-                    <a href="" class="btn btn-custom btn-custom-roxo">Aproveite o Spotify Free</a>
-                    <a href="" class="btn btn-custom btn-custom-branco">Obter Spotify Premium</a>
+                    <div id="controles-carousel" class="carousel slide" data-ride="carousel">
+                        <!-- Conteúdo slide -->
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <h1>Música para todos</h1>
+                                <a href="#" class="btn btn-custom btn-custom-roxo">Aproveite o Spotify Free</a>
+                                <a href="#" class="btn btn-custom btn-custom-branco">Obter Spotify Premium</a>
+                            </div>
+                            <div class="carousel-item">
+                                <h1>As melhores rádios</h1>
+                                <a href="#" class="btn btn-custom btn-custom-branco"><i class="fa-solid fa-music mr-1"></i>Ouça agora</a>
+                            </div>
+                        </div>
+                        <!--Controles-->
+                        <a href="#controles-carousel" class="carousel-control-prev" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a href="#controles-carousel" class="carousel-control-next" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
